--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Check secrets
         if: ${{ env.replicate-api-token == '' }}
         run: |
-          echo "🙈 Uh oh! Missing repository secret: REPLICATE_API_TOKEN"
+          echo "🙈 Uh oh! Missing repository secret: REPLICATE_DREAMBOOTH_API_TOKEN"
           echo "Go to https://replicate.com/account to copy your API token,"
           echo "then visit https://github.com/${{ github.repository }}/settings/secrets/actions/new to set it."
           echo 
@@ -48,7 +48,7 @@ jobs:
       - name: Upload training data
         id: upload-training-data
         run: |
-          RESPONSE=$(curl -s -X POST -H "Authorization: Token ${{ secrets.REPLICATE_API_TOKEN }}" https://dreambooth-api-experimental.replicate.com/v1/upload/data.zip)
+          RESPONSE=$(curl -s -X POST -H "Authorization: Token ${{ secrets.REPLICATE_DREAMBOOTH_API_TOKEN }}" https://dreambooth-api-experimental.replicate.com/v1/upload/data.zip)
           curl -X PUT -H "Content-Type: application/zip" --upload-file data.zip "$(jq -r ".upload_url" <<< "$RESPONSE")"
           echo "INSTANCE_DATA_URL=$(jq -r '.serving_url' <<< $RESPONSE)"
           echo "INSTANCE_DATA_URL=$(jq -r '.serving_url' <<< $RESPONSE)" >> $GITHUB_OUTPUT
@@ -56,7 +56,7 @@ jobs:
       - name: Start training
         run: |
           curl -s -X POST \
-          -H "Authorization: Token ${{ secrets.REPLICATE_API_TOKEN }}" \
+          -H "Authorization: Token ${{ secrets.REPLICATE_DREAMBOOTH_API_TOKEN }}" \
           -H "Content-Type: application/json" \
           -d '{
                   "input": {
